# cloudkit-aap

./: .ansible-lint-ignore  .ansible-lint.yml  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CLAUDE.md  Makefile  OWNERS  README.md  ansible.cfg  devfile.yaml  playbook_cloudkit_cleanup_stale_network_resources.yml  playbook_cloudkit_config_as_code.yml  playbook_cloudkit_create_compute_instance.yml  playbook_cloudkit_create_hosted_cluster.yml  playbook_cloudkit_create_hosted_cluster_post_install.yml  playbook_cloudkit_create_vm.yml  playbook_cloudkit_delete_compute_instance.yml  playbook_cloudkit_delete_hosted_cluster.yml  playbook_cloudkit_delete_vm.yml  playbook_osac_attach_public_ip.yml  playbook_osac_create_compute_instance.yml  playbook_osac_create_host.yml  playbook_osac_create_hosted_cluster.yml  playbook_osac_create_hostpool.yml  playbook_osac_create_public_ip.yml  playbook_osac_create_public_ip_pool.yml  playbook_osac_create_security_group.yml  playbook_osac_create_subnet.yml  playbook_osac_create_virtual_network.yml  playbook_osac_delete_compute_instance.yml  playbook_osac_delete_host.yml  playbook_osac_delete_hostpool.yml  playbook_osac_delete_public_ip.yml  playbook_osac_delete_public_ip_pool.yml  playbook_osac_delete_security_group.yml  playbook_osac_delete_subnet.yml  playbook_osac_delete_virtual_network.yml  playbook_osac_detach_public_ip.yml  playbook_osac_import_agents.yml  (+4 more)
.claude/rules/: networking-cudn.md  playbook-patterns.md
collections/: requirements.yml
docs/: import-agents.md  netris-integration.md  nico-integration.md
execution-environment/: README.md  execution-environment.yaml  requirements.txt  requirements.yaml
inventory/: localhost.yml
rulebooks/: cluster_fulfillment.yml
samples/: hosted_cluster_extra_vars.yml  import_agents_bmc_secrets.yml  import_agents_extra_vars.yml
(+529 files in other folders)
