[project]
name = "cloudkit-aap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible>=11.4.0",
    "boto3>=1.37.29",
    "botocore>=1.37.29",
    "jmespath>=1.0.1",
    "kubernetes>=32.0.1",
    "python-esiclient>=1.1.0",
    "python-esileapclient>=1.0.0",
    "python-ironicclient>=5.10.0",
    "python-openstackclient>=7.4.0",
]
